2014-11-01  Eli Zaretskii  <eliz@gnu.org>

	* notes/repo (Notes): Reword the stylistic guidance for commit log
	messages so that they are in line with Emacs development practices
	and style guidance.

2014-10-27  Eric S. Raymond  <esr@thyrsus.com>

	* notes/bzr: Rename to notes/repo, reorganize to separate
	VCS-dependent from VCS-independent stuff.  Add guidance about
	commit-comment format under DVCSes.

	* notes/BRANCH: Merged into notes/repo.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Merge in all changes up to 24.4 release.

2014-10-15  Eli Zaretskii  <eliz@gnu.org>

	* unidata/unidata-gen.el (unidata-prop-alist): New properties
	'paired-bracket' and 'bracket-type', in support of the UBA 6.3.
	(unidata-gen-table): Support PROP-IDX being a function.
	(unidata-describe-bidi-bracket-type, unidata-gen-brackets-list)
	(unidata-gen-bracket-type-list): New functions.
	(unidata-check): Support checking the 'bracket-type' attribute.
	(unidata-gen-files): Don't create backups for uni-*.el files.

	* unidata/Makefile.in (${unidir}/charprop.el): Depend on
	BidiMirroring.txt and BidiBrackets.txt.

	* unidata/BidiBrackets.txt: New file, from Unicode.

2014-10-13  Glenn Morris  <rgm@gnu.org>

	* authors.el (authors-aliases, authors-fixed-case)
	(authors-obsolete-files-regexps): Additions.
	(authors-no-scan-regexps): New constant.
	(authors-no-scan-file-p): New function.
	(authors): Respect authors-no-scan-file-p.

2014-10-12  Paul Eggert  <eggert@cs.ucla.edu>

	Fix putenv race conditions with undefined behavior (Bug#8705).
	* merge-gnulib (GNULIB_MODULES): Add time_r, since Emacs now
	calls localtime_r and gmtime_r directly.

2014-10-07  Glenn Morris  <rgm@gnu.org>

	* unidata/Makefile.in: Check for deleted uni- files.  (Bug#18489)
	(all): Use unifiles rather than charprop.el.
	(FORCE): New variable and phony rule.
	(${unidir}/charprop.el): Respect FORCE.
	(unifiles): New rule.

	* unidata/Makefile.in (unidir): Rename from DSTDIR.  Change all uses.