@@ -1,3 +1,7 @@
+2014-11-04  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* mouse.el (mouse-drag-line): Fix misspelling of "right-fringe".
+
 2014-11-04  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* net/eww.el (eww): Trim URL with `string-trim'.
